min width on wrapper and width on container to fix horizontal scroll issue

--- a/template/templates/cyrheault/sass/layout-960.scss
+++ b/template/templates/cyrheault/sass/layout-960.scss
@@ -1,3 +1,11 @@
+.container {
+	width: 940px;
+}
+
+#wrapper {
+	min-width: 960px;
+}
+
 #header {
 	padding-bottom: 44px;
 }
